@@ -1,3 +1,12 @@
+2012-05-09  Filip Pizlo  <fpizlo@apple.com>
+
+        It should be possible to get useful debug logging from the JIT memory allocator
+        https://bugs.webkit.org/show_bug.cgi?id=86042
+
+        Reviewed by Geoff Garen.
+
+        * jit/ExecutableAllocator.h:
+
 2012-05-09  Gavin Barraclough  <barraclough@apple.com>
 
         GC race condition in OpaqueJSClass::prototype
